OSSM/1_32/must-gather.local.3859268501405119422/registry-redhat-io-openshift-service-mesh-istio-must-gather-rhel8-sha256-4d59bccd930a20d3ef173ce3b67824c13e4a552054077134140a87f49a661feb/cluster-scoped-resources/admissionregistration.k8s.io/validatingwebhookconfigurations/openshift-operators.servicemesh-resources.maistra.io.yaml
---
apiVersion: admissionregistration.k8s.io/v1
kind: ValidatingWebhookConfiguration
metadata:
  annotations:
    service.beta.openshift.io/inject-cabundle: "true"
  creationTimestamp: "2024-06-05T10:45:07Z"
  generation: 4
  managedFields:
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:metadata:
        f:annotations:
          .: {}
          f:service.beta.openshift.io/inject-cabundle: {}
      f:webhooks:
        .: {}
        k:{"name":"smcp.validation.maistra.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"smm.validation.maistra.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
        k:{"name":"smmr.validation.maistra.io"}:
          .: {}
          f:admissionReviewVersions: {}
          f:clientConfig:
            .: {}
            f:service:
              .: {}
              f:name: {}
              f:namespace: {}
              f:path: {}
              f:port: {}
          f:failurePolicy: {}
          f:matchPolicy: {}
          f:name: {}
          f:namespaceSelector: {}
          f:objectSelector: {}
          f:rules: {}
          f:sideEffects: {}
          f:timeoutSeconds: {}
    manager: istio-operator
    operation: Update
    time: "2024-06-05T10:45:07Z"
  - apiVersion: admissionregistration.k8s.io/v1
    fieldsType: FieldsV1
    fieldsV1:
      f:webhooks:
        k:{"name":"smcp.validation.maistra.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"smm.validation.maistra.io"}:
          f:clientConfig:
            f:caBundle: {}
        k:{"name":"smmr.validation.maistra.io"}:
          f:clientConfig:
            f:caBundle: {}
    manager: service-ca-operator
    operation: Update
    time: "2024-06-05T10:45:17Z"
  name: openshift-operators.servicemesh-resources.maistra.io
  resourceVersion: "34393"
  uid: 762b7fde-0b86-4a02-a7be-df80fab35999
webhooks:
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJVXRWdE5UajNwdFV3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjeE56VTRNalUzTWpBZQpGdzB5TkRBMk1EVXhNREUyTVRGYUZ3MHlOakE0TURReE1ERTJNVEphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNNVGMxT0RJMU56SXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGdBbDh6SWxVUjdPcTZNS0NJMlNLR0FYUlEyRnRwSHZlNwpSZm9Zb2JWekVjWF [...]
    service:
      name: maistra-admission-controller
      namespace: openshift-operators
      path: /validate-smcp
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: smcp.validation.maistra.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - maistra.io
    apiVersions:
    - v1
    - v2
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicemeshcontrolplanes
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJVXRWdE5UajNwdFV3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjeE56VTRNalUzTWpBZQpGdzB5TkRBMk1EVXhNREUyTVRGYUZ3MHlOakE0TURReE1ERTJNVEphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNNVGMxT0RJMU56SXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGdBbDh6SWxVUjdPcTZNS0NJMlNLR0FYUlEyRnRwSHZlNwpSZm9Zb2JWekVjWF [...]
    service:
      name: maistra-admission-controller
      namespace: openshift-operators
      path: /validate-smmr
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: smmr.validation.maistra.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - maistra.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicemeshmemberrolls
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
- admissionReviewVersions:
  - v1beta1
  clientConfig:
    caBundle: LS0tLS1CRUdJTiBDRVJUSUZJQ0FURS0tLS0tCk1JSURVVENDQWptZ0F3SUJBZ0lJVXRWdE5UajNwdFV3RFFZSktvWklodmNOQVFFTEJRQXdOakUwTURJR0ExVUUKQXd3cmIzQmxibk5vYVdaMExYTmxjblpwWTJVdGMyVnlkbWx1WnkxemFXZHVaWEpBTVRjeE56VTRNalUzTWpBZQpGdzB5TkRBMk1EVXhNREUyTVRGYUZ3MHlOakE0TURReE1ERTJNVEphTURZeE5EQXlCZ05WQkFNTUsyOXdaVzV6CmFHbG1kQzF6WlhKMmFXTmxMWE5sY25acGJtY3RjMmxuYm1WeVFERTNNVGMxT0RJMU56SXdnZ0VpTUEwR0NTcUcKU0liM0RRRUJBUVVBQTRJQkR3QXdnZ0VLQW9JQkFRRGdBbDh6SWxVUjdPcTZNS0NJMlNLR0FYUlEyRnRwSHZlNwpSZm9Zb2JWekVjWF [...]
    service:
      name: maistra-admission-controller
      namespace: openshift-operators
      path: /validate-smm
      port: 443
  failurePolicy: Fail
  matchPolicy: Equivalent
  name: smm.validation.maistra.io
  namespaceSelector: {}
  objectSelector: {}
  rules:
  - apiGroups:
    - maistra.io
    apiVersions:
    - v1
    operations:
    - CREATE
    - UPDATE
    resources:
    - servicemeshmembers
    scope: '*'
  sideEffects: None
  timeoutSeconds: 10
